--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0-native-mt"
     implementation "com.github.florent37:shapeofview:1.4.7"
+
+//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
 }
 repositories {
     mavenCentral()
