--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript {
     ext.coroutines_version = '1.3.0'
     repositories {
         google()
-        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -19,7 +18,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
