--- a/filepicker/src/main/AndroidManifest.xml
+++ b/filepicker/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
 
-    <!--    <uses-permission-->
-    <!--        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"-->
-    <!--        android:minSdkVersion="30" />-->
+<!--    <uses-permission-->
+<!--        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"-->
+<!--        android:minSdkVersion="30"-->
+<!--        tools:ignore="ScopedStorage" />-->
 
     <!--    ACTION_MANAGE_ALL_FILES_ACCESS_PERMISSION-->
     <!--    MANAGE_EXTERNAL_STORAGE-->
