--- a/build.gradle
+++ b/build.gradle
@@ -4,23 +4,23 @@ buildscript {
     ext.coroutines_version = '1.3.0'
     repositories {
         google()
-        mavenCentral()
+        jcenter()
         maven { url 'https://jitpack.io' }
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-//        classpath "com.github.HBiSoft:PickiT:2.0.3@aar"
 
         // NOTE: Do not place your application dependencies here; they belong
-        // in the indivdual module build.gradle files
+        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
         maven { url 'https://jitpack.io' }
     }
 }
