--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -15,7 +15,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-        multiDexEnabled true
+//        multiDexEnabled true
 
     }
 
