--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@
 buildscript {
     ext.kotlin_version = '1.5.20'
     ext.coroutines_version = '1.3.0'
+    apply from: 'dependencies.gradle'
+
     repositories {
         google()
-        jcenter()
         maven { url 'https://jitpack.io' }
         mavenCentral()
     }
@@ -20,7 +21,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
     }
 }
