--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     implementation project(path: ':tedimagepicker')
 //    implementation 'androidx.multidex:multidex: 2.0.1'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
 repositories {
     mavenCentral()
