--- a/tedimagepicker/build.gradle
+++ b/tedimagepicker/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation deps.androidx.appcompat
     implementation deps.rx.rxJava
     implementation deps.rx.rxAndroid
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.6.0-beta01'
 
     implementation deps.glide.glide
     annotationProcessor deps.glide.annotation
