--- a/config.gradle
+++ b/config.gradle
@@ -2,15 +2,14 @@ ext {
     plugins = [
             library    : 'com.android.library',
             application: 'com.android.application',
-            maven_publish: 'maven-publish'
+//            maven_publish: 'maven-publish'
     ]
 
     android = [
-            applicationId    : "com.album.sample",
             compileSdkVersion: 31,
             buildToolsVersion: "30.0.3",
 
-            minSdkVersion    : 19,
+            minSdkVersion    : 21,
             targetSdkVersion : 31,
 
             versionCode      : 1,
@@ -25,7 +24,6 @@ ext {
             recyclerView: 'com.android.support:recyclerview-v7:28.0.0',
             cardView    : 'com.android.support:cardview-v7:28.0.0',
 
-//            album       : 'com.yanzhenjie:album:2.1.3',
             glide       : 'com.github.bumptech.glide:glide:3.8.0'
     ]
 }
