--- a/album/build.gradle
+++ b/album/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: rootProject.ext.plugins.library
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+}
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
@@ -7,6 +10,12 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.android.minSdkVersion
         targetSdkVersion rootProject.ext.android.targetSdkVersion
+
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     resourcePrefix 'album'
