--- a/album/build.gradle
+++ b/album/build.gradle
@@ -33,12 +33,21 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation rootProject.ext.dependencies.appCompat
     implementation rootProject.ext.dependencies.design
     implementation rootProject.ext.dependencies.recyclerView
     implementation rootProject.ext.dependencies.cardView
     api rootProject.ext.dependencies.mediaScanner
     implementation 'com.google.android.material:material:1.5.0'
+}
+
+
+repositories {
+    mavenCentral()
 }
 
 
