--- a/config.gradle
+++ b/config.gradle
@@ -18,8 +18,7 @@ ext {
     dependencies = [
             mediaScanner: 'com.yanzhenjie:mediascanner:1.0.3',
 
-            design      : 'com.android.support:design:28.0.0',
-            appCompat   : 'com.android.support:appcompat-v7:28.0.0',
+            appCompat   : 'androidx.appcompat:appcompat:1.4.1',
             recyclerView: 'com.android.support:recyclerview-v7:28.0.0',
             cardView    : 'com.android.support:cardview-v7:28.0.0',
 
