--- a/miraAlbum/build.gradle
+++ b/miraAlbum/build.gradle
@@ -1,24 +1,17 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
+    id 'com.android.application'
 }
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion "30.0.3"
+    compileSdkVersion rootProject.ext.android.compileSdkVersion
+    buildToolsVersion rootProject.ext.android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 32
-        versionCode 1
-        versionName "1.0"
-
-        multiDexEnabled true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
+        minSdkVersion rootProject.ext.android.minSdkVersion
+        targetSdkVersion rootProject.ext.android.targetSdkVersion
     }
 
-//    resourcePrefix 'album'
+    resourcePrefix 'album'
 
     buildTypes {
         release {
@@ -35,17 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     implementation rootProject.ext.dependencies.appCompat
 
     implementation 'com.google.android.material:material:1.5.0'
 }
-
-repositories {
-    mavenCentral()
-}
-
-
