--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 
     implementation 'id.zelory:compressor:3.0.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation project(path: ':album_gallary')
 //    implementation project(path: ':album_media')
 
