--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -39,7 +39,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.20"
+//    implementation "org.jetbrains.kotlin:kotlin-reflect:1.1.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -50,22 +51,16 @@ dependencies {
 
     //easy permission
     implementation 'pub.devrel:easypermissions:3.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.20"
 
     implementation "de.hdodenhof:circleimageview:3.1.0"
     implementation "com.intuit.sdp:sdp-android:1.0.6"
 
-
-//    implementation 'id.zelory:compressor:3.0.1'
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation project(path: ':album_gallary')
 
     implementation 'com.github.bumptech.glide:glide:4.13.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-}
-repositories {
-    mavenCentral()
 }
