--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -59,4 +59,5 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    api 'com.github.Shouheng88:compressor:1.6.0'
 }
